--- a/Class1.html
+++ b/Class1.html
@@ -4,9 +4,26 @@
     <title>Web page</title>
   </head>
   <body>
+  <span>LOGO</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <span>Home</span>
+  <span>About</span>
+  <span>Contact</span>
+  <span>project</span>
+    <article>
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quidem nisi exercitationem recusandae quia tempore corporis unde nam quis sapiente, asperiores qui est aspernatur laboriosam pariatur consequuntur ut expedita sequi.</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae rerum corrupti illo illum quas maxime, ipsam accusamus dolore ut, ratione voluptas similique repellendus, id iusto molestiae ipsum cum dicta ea beatae cupiditate tempora et nesciunt nostrum labore. Culpa quidem eligendi accusantium tenetur praesentium fugit aut dolorum dignissimos incidunt reprehenderit repudiandae rerum veniam facere, similique et laudantium officia neque ex tempora at maxime, inventore ipsa! Asperiores quaerat nesciunt sint blanditiis iste ducimus ad molestiae incidunt non, vero pariatur quam saepe, sunt rerum voluptates tenetur explicabo. Nobis repudiandae laborum, ipsum ipsa iste sint praesentium dolorum dolores fugiat voluptates atque temporibus. Quaerat, nesciunt eligendi iusto cupiditate iure facilis, veniam tenetur cumque facere sequi quis.</p>
+    </article>
+    <!-- <acronym title="Good morning">Hello</acronym> -->
+  <!-- <big>Hello</big> -->
+   <!-- <font>hello world </font> -->
+    <abbr title="Good morning">Hello</abbr>
     <span style="background-color: lightblue">Lorem, ipsum dolor.</span>
     <span style="background-color: lightblue">Lorem, ipsum dolor.</span>
 
+    <a href="https://ganeshdutt.netlify.app">ganesh Dutt</a>
+<!-- text="" -->
+
+<a href="https://www.flipkart.com/" target="_blank">Flipkart</a>
     <p style="background-color: rgb(201, 158, 241)">.</p>
     <p>Lorem, <hr />ipsum dolor.</p>
     <br />
@@ -23,5 +40,13 @@
       reprehenderit consectetur incidunt.
     </p>
     <button>Click me</button>
+
+    <img src="https://avatars.githubusercontent.com/u/131270675?v=4" alt="Ganesh" width="300px">
+
+<video src="https://videocdn.cdnpk.net/videos/d77b7c53-880f-4c56-80fa-60b94ad6255f/horizontal/previews/clear/large.mp4?token=exp=1736145255~hmac=e32b184e88ba648245111996130fdee56863e5a45849f82cb39b1c133c3fb884" controls loop  autoplay></video>
+
+<audio src="Mere Mehboob_320(PagalWorld.com.sb).mp3" controls></audio>
+
+<button><a href="#">click me </a></button>
   </body>
 </html>
