--- a/project/about.html
+++ b/project/about.html
@@ -18,6 +18,28 @@
       <a href="Services.html">Services</a>
     </nav>
 
-    <p>i am About page</p>
+    <h1>I'm About page</h1>
+    <h2 style="text-align: center">Happy Birthday</h2>
+    <img
+      src="https://img.freepik.com/free-photo/looking-camera-handsome-man-wearing-glasses-blue-hat-holding-cake-with-balloons-blowing-whistle-isolated-white-background_141793-63621.jpg?ga=GA1.1.1872758581.1724841441&semt=ais_hybrid"
+      alt=""
+    />
+    <a
+      href="https://www.flipkart.com/search?q=gifts&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off"
+      target="_blank"
+    >
+      <img
+        src="https://img.freepik.com/premium-photo/birthday-cake-with-picture-cupcake-it_1142927-5991.jpg?ga=GA1.1.1872758581.1724841441&semt=ais_hybrid"
+        alt=""
+      />
+    </a>
+    <img
+      src="https://img.freepik.com/free-photo/joyful-handsome-caucasian-man-wearing-birthday-cap-holds-paper-shopping-bag-air-tickets-birthday-cake_141793-99654.jpg?ga=GA1.1.1872758581.1724841441&semt=ais_hybrid"
+      alt=""
+    />
+    <img
+      src="https://img.freepik.com/free-photo/young-beautiful-woman-with-curly-hair-holiday-hat-holding-birthday-cake-showing-ok-sign-smiling-winking-standing-orange-wall_141793-29460.jpg?ga=GA1.1.1872758581.1724841441&semt=ais_hybrid"
+      alt=""
+    />
   </body>
 </html>
