--- a/project/index.html
+++ b/project/index.html
@@ -18,6 +18,16 @@
       <a href="Services.html">Services</a>
     </nav>
 
-    <p>i am home page</p>
+    <h1>I'm home page</h1>
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
+    <img src="../img/img1.jpg" alt="" width="300px" height="auto" />
   </body>
 </html>
