--- a/project/about.html
+++ b/project/about.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <nav>
-      <a href="">LOGO</a> <br />
+      <br />
+      <a href="#">
+        <img src="../img/img1.jpg" alt="" width="50px" />
+      </a>
+      <br />
       <br />
       <a href="index.html">Home</a><br />
       <br />
