--- a/style/code3.html
+++ b/style/code3.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- internal CSS -->
+    <!-- syntax -->
+    <!-- <tag> 
+        selector{
+            background-color: red;  /* property: value */
+        }
+     </tag> -->
     <style>
         p {
             background-color: red;
@@ -13,6 +20,12 @@
 </head>
 
 <body>
+
+
+
+    <!-- inline 
+    syntax 
+   <tagName style=""> -->
     <p style="background-color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aperiam assumenda
         recusandae dicta optio,
         distinctio earum, saepe, ipsum perspiciatis nobis officiis fuga quam rem sint nam iure quae corporis beatae?</p>
