--- a/style/selector/class3.html
+++ b/style/selector/class3.html
@@ -44,17 +44,131 @@
             color: black;
             font-size: 20px;
         }
+
+        /*-- combinators Selectors Type-- */
+
+        /* type-1 Descendant Selector */
+        .main button {
+            background-color: red;
+        }
+
+        /* type-2 Child Selector */
+        ul>li {
+            background-color: blue;
+            color: white;
+        }
+
+        /* li > p {
+            background-color: blue;
+            color: white;
+        } */
+
+
+        /* type-3 Adjacent Sibling Selector */
+        /* .sparsh+h2 {
+            background-color: blue;
+            color: rgb(214, 45, 45);
+        }
+
+
+        p {
+            background-color: yellow;
+            color: black;
+        }
+
+        .useOfSpan {
+            color: red;
+        } */
+        /* type-4 General Sibling Selector */
+        .General_Sibling_Selector~p {
+            background-color: blue;
+            color: white;
+        }
     </style>
 </head>
 
 <body>
+    <div class="General_Sibling_Selector">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam doloribus iste con
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam doloribus iste consectetur quod quo! Quisquam
+        </p>
+    </div>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias architecto nam earum fugiat sed, at est autem
+        obcaecati ex, consequuntur enim assumenda eaque labore consequatur excepturi ipsam veritatis quos molestias.
+    </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus expedita nostrum tenetur harum nesciunt
+        facilis totam illo, magnam, rem optio iure inventore cupiditate, reprehenderit sed beatae est fuga veniam autem!
+    </p>
+
+    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam doloribus iste consectetur quod quo! Quisquam
+        <hr>
+        <span class="useOfSpan"> ipsum voluptatem laboriosam est adipisci? Vitae, dicta debitis. Ex hic, fuga cum
+            veritatis nobis
+            sunt.</span>
+    </p> -->
+
+
+    <!-- <div class="sparsh">
+        Lorem ipsum dolor sit amet.
+    </div>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem ut accusamus, temporibus recusandae asperiores
+        <hr>
+        repellat animi doloremque eaque necessitatibus nulla quaerat quae vitae ipsa laborum reprehenderit velit
+        mollitia nobis aliquam!
+    </h2>
+    <ul>
+        <li>Lorem ipsum dolor sit amet.
+            <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+    </ul>
+    <div class="main">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos expedita ratione animi quod reiciendis
+            fuga maxime velit eveniet, dolore incidunt nemo sed unde autem, illum molestias voluptatibus molestiae et
+            id.</p>
+        <button>click me</button>
+    </div>
     <input type="text" placeholder="Type here..">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente autem
         incidunt dolorem
         suscipit pariatur
-        asperiores quaerat natus aut saepe impedit provident sit aspernatur tenetur enim odio, vero quasi adipisci?</p>
+        asperiores quaerat natus aut saepe impedit provident sit aspernatur tenetur enim odio, vero quasi adipisci?</p> -->
     <!-- Pseudo-element -->
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <!-- <h1>Lorem ipsum dolor sit amet.</h1> -->
 </body>
 
 </html>
