--- a/style/BoxModel/class1.html
+++ b/style/BoxModel/class1.html
@@ -8,6 +8,7 @@
     <style>
         * {
             margin: 0;
+            padding: 0;
         }
 
         p {
@@ -21,7 +22,20 @@
             /* margin: 10px 20px 40px 30px; */
 
             /* margin: 10px 30px 70px; */
-            margin: 10px 30px;
+            margin: 100px 30px;
+
+
+            border: 1px solid black;
+
+            padding: 10px;
+            padding: 20px 50px;
+            padding: 10px 30px 60px;
+            padding: 10px 20px 30px 40px;
+            padding-top: 10px;
+            padding-right: 30px;
+            padding-bottom: 90px;
+            padding-left: 40px;
+
 
         }
     </style>
