--- a/style/BoxModel/class1.html
+++ b/style/BoxModel/class1.html
@@ -25,7 +25,6 @@
             margin: 100px 30px;
 
 
-            border: 1px solid black;
 
             padding: 10px;
             padding: 20px 50px;
@@ -35,6 +34,13 @@
             padding-right: 30px;
             padding-bottom: 90px;
             padding-left: 40px;
+
+            border: 1px solid black;
+
+            border-width: 20px;
+            border-style: groove;
+            border-color: red;
+
 
 
         }
