Margin padding navbar

--- a/style/BoxModel/class1.html
+++ b/style/BoxModel/class1.html
@@ -41,6 +41,9 @@
             border-style: groove;
             border-color: red;
 
+            border-top-width: 1px;
+            border-left-width: 5px;
+
 
 
         }
