--- a/style/Overflow/class1.html
+++ b/style/Overflow/class1.html
@@ -13,11 +13,24 @@
             border: 1px solid black;
 
             /* Overflow */
-            overflow: visible;
+            /* overflow: visible;
 
             overflow: hidden;
             overflow: scroll;
-            overflow: auto;
+            overflow: auto; */
+
+            /* 
+            white-space: nowrap;
+            overflow-x: hidden;
+            overflow-x: scroll;
+            overflow-x: auto; */
+
+
+            /* white-space: nowrap; */
+            overflow-y: hidden;
+            overflow-y: scroll;
+            overflow-y: auto;
+
 
 
         }
