--- a/style/project/index.html
+++ b/style/project/index.html
@@ -18,9 +18,9 @@
             color: white;
             padding: 10px 20px;
             justify-content: space-around;
-            position: fixed;
+            /* position: fixed;
             width: 100%;
-            top: 0;
+            top: 0; */
         }
 
         .logo {
@@ -146,6 +146,46 @@
             height: 80px;
             border-radius: 20px;
         }
+
+        /* .sec3 */
+        .sec3Card1 img {
+            width: 100px;
+        }
+
+        .sec3 {
+            margin-top: 100px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            width: 1200px;
+            background-color: lightblue;
+            white-space: nowrap;
+            overflow-x: scroll;
+            margin-left: 200px;
+            padding: 20px;
+            border-radius: 30px;
+            margin-bottom: 100px;
+
+
+        }
+
+        .sec3FirstHalf {
+            display: flex;
+            /* flex-wrap: wrap; */
+            gap: 30px;
+            justify-content: space-around;
+            padding: 20px;
+
+        }
+
+        .sec3Card1 {
+            width: 200px;
+            padding: 20px;
+            background-color: #f1f1f1;
+            border-radius: 20px;
+            text-align: center;
+            transition: all .5s;
+        }
     </style>
 </head>
 
@@ -207,6 +247,172 @@
                 <p>Designed by careerwill’s highly qualified faculty to help you ace your exams</p>
             </div>
         </div>
+    </div>
+
+    <div class="sec3">
+        <div class="sec3FirstHalf">
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+        </div>
+        <div class="sec3FirstHalf">
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+        </div>
+        <div class="sec3FirstHalf">
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+            <div class="sec3Card1">
+                <img src="https://careerwill.com/images/mocktest.svg" alt="">
+                <h3>Mock Test</h3>
+            </div>
+        </div>
+
     </div>
 </body>
 
