--- a/TailwindCSS/src/code2.html
+++ b/TailwindCSS/src/code2.html
@@ -9,10 +9,24 @@
 </head>
 
 <body>
-    <h1 class="text-red-500">Lorem ipsum dolor sit </h1>
+
+    <nav class="flex justify-around bg-black text-white p-5">
+        <div class="text-xl font-bold">LOGONAME</div>
+        <ul class=" gap-10 hidden md:flex">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Services</li>
+        </ul>
+        <div class="bar md:hidden">
+            ⏸️
+        </div>
+    </nav>
+
+    <!-- <h1 class="text-red-500">Lorem ipsum dolor sit </h1>
 
     <div class="box bg-blue-500 sm:bg-black md:bg-green-700 lg:bg-red-500 xl:bg-amber-800"
-        style="width: 500px; height: 200px;"></div>
+        style="width: 500px; height: 200px;"></div> -->
 </body>
 
 </html>
