--- a/TailwindCSS/src/code2.html
+++ b/TailwindCSS/src/code2.html
@@ -23,10 +23,50 @@
         </div>
     </nav>
 
-    <!-- <h1 class="text-red-500">Lorem ipsum dolor sit </h1>
+    <div class="sec1 flex flex-col-reverse md:flex-row justify-around items-center p-5">
+        <div class="sec1Text ">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit cumque nihil totam, eligendi voluptatem
+                unde ratione deserunt iure aliquid blanditiis hic ex earum, dolor dolores, aliquam molestiae. Ut,
+                deserunt molestias!
+            </p>
+            <button class="bg-yellow-600 text-white px-3 py-2 rounded-xl hover:text-black cursor-pointer">Click me
+            </button>
+        </div>
 
-    <div class="box bg-blue-500 sm:bg-black md:bg-green-700 lg:bg-red-500 xl:bg-amber-800"
-        style="width: 500px; height: 200px;"></div> -->
+        <img src="../../img/img2.jpg" alt="" class="w-full h-full object-cover sm:w-[400px]">
+    </div>
+
+    <!-- sec2 -->
+    <div class="sec2 mt-[30px]">
+        <h1 class="text-center text-2xl">Lorem ipsum dolor sit amet.</h1>
+        <div class="empty bg-amber-500 w-[300px] h-[3px] mx-auto rounded-xl"></div>
+        <div class="mainCards flex flex-col md:flex-row justify-around gap-10 p-5 items-center">
+            <div class="card text-center w-[300px] h-[400px] bg-blue-300 rounded-2xl">
+                <img src="../../img/img1.jpg" alt="" class="w-full object-cover rounded-2xl">
+                <div class="cardText">
+                    <h2 class="text-2xl">Lorem ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti lib</p>
+                </div>
+                <button>Read More</button>
+            </div>
+            <div class="card text-center w-[300px] h-[400px] bg-blue-300 rounded-2xl">
+                <img src="../../img/img1.jpg" alt="" class="w-full object-cover rounded-2xl">
+                <div class="cardText">
+                    <h2 class="text-2xl">Lorem ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti lib</p>
+                </div>
+                <button>Read More</button>
+            </div>
+            <div class="card text-center w-[300px] h-[400px] bg-blue-300 rounded-2xl">
+                <img src="../../img/img1.jpg" alt="" class="w-full object-cover rounded-2xl">
+                <div class="cardText">
+                    <h2 class="text-2xl">Lorem ipsum dolor</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti lib</p>
+                </div>
+                <button>Read More</button>
+            </div>
+        </div>
 </body>
 
 </html>
