--- a/JavaScript/code3.html
+++ b/JavaScript/code3.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <button onclick="Sparsh()">Click me </button>
     <script>
         // number values
         // let a = 10;
@@ -42,25 +43,28 @@
 
 
 
-        // // null value   
+        // // null value
         // let h = null;
         // document.writeln(h);
 
 
         // object values
 
-        let person = {
-            name: "Sparsh",
-            age: 20,
-            city: "Dehradun",
-            country: "India",
-            isStudent: true,
+        // let person = {
+        //     name: "Sparsh",
+        //     age: 20,
+        //     city: "Dehradun",
+        //     country: "India",
+        //     isStudent: true,
+
+        // }
+        // document.writeln(person.name, " ", person.age, ' ', person.city, ' ', person.country, ' ', person.isStudent);
+        // console.log(person);
+
+        function Sparsh() {
+            document.writeln("i am Sparsh");
 
         }
-        document.writeln(person.name, " ", person.age, ' ', person.city, ' ', person.country, ' ', person.isStudent);
-        console.log(person);
-
-
 
     </script>
 </body>
