--- a/JavaScript/code3.html
+++ b/JavaScript/code3.html
@@ -17,6 +17,9 @@
         // document.writeln(a);
         // document.writeln(b);
 
+        // bigInt
+        let a = 1234567890123456789012345678901234567890n;
+        document.writeln(a);
 
 
         // // string values
