--- a/JavaScript/Basic/code3.html
+++ b/JavaScript/Basic/code3.html
@@ -18,8 +18,8 @@
         // document.writeln(b);
 
         // bigInt
-        let a = 1234567890123456789012345678901234567890n;
-        document.writeln(a);
+        // let a = 1234567890123456789012345678901234567890n;
+        // document.writeln(a);
 
 
         // // string values
