update Raltional and Assignment

--- a/JavaScript/Operators/Arithmetic.html
+++ b/JavaScript/Operators/Arithmetic.html
@@ -12,6 +12,14 @@
         let num1 = 30;
         let num2 = 40;
 
+        num1++;
+        num2--;
+
+        document.writeln("Increment: ", num1);
+        document.writeln("Decrement: ", num2);
+
+
+
         // addition
         let sum = num1 + num2;
         document.writeln("Addition: ", sum);
@@ -32,6 +40,9 @@
         // modulus
         let mod = num1 % num2;
         document.writeln("Modulus: ", mod);
+
+
+
     </script>
 </body>
 
