. if-else if-else statement:

--- a/JavaScript/DecisionMakingStatement/ifStatement.html
+++ b/JavaScript/DecisionMakingStatement/ifStatement.html
@@ -15,13 +15,38 @@
         //     document.writeln("a is equal to 45");
 
         // }
-        if (a == 45) {
-            document.writeln("a is equal to 45");
+        // if (a == 45) {
+        //     document.writeln("a is equal to 45");
 
+        // }
+        // else {
+        //     document.writeln("a is not equal to 45");
+
+        // }
+
+
+        // let marks = 60;
+        // if (marks >= 50) {
+        //     document.writeln("You are pass");
+        // }
+        // else {
+        //     document.writeln("You are fail");
+        // }
+        const marks = 20;
+        if (marks >= 80) {
+            document.write("A grade");
+        }
+        else if (marks >= 60) {
+            document.write("B grade");
+        }
+        else if (marks >= 50) {
+            document.write("C grade");
+        }
+        else if (marks >= 35) {
+            document.write("D grade");
         }
         else {
-            document.writeln("a is not equal to 45");
-
+            document.write("Fail");
         }
     </script>
 </body>
