. Nested if else

--- a/JavaScript/DecisionMakingStatement/ifStatement.html
+++ b/JavaScript/DecisionMakingStatement/ifStatement.html
@@ -32,22 +32,41 @@
         // else {
         //     document.writeln("You are fail");
         // }
-        const marks = 20;
-        if (marks >= 80) {
-            document.write("A grade");
-        }
-        else if (marks >= 60) {
-            document.write("B grade");
-        }
-        else if (marks >= 50) {
-            document.write("C grade");
-        }
-        else if (marks >= 35) {
-            document.write("D grade");
+        // const marks = 20;
+        // if (marks >= 80) {
+        //     document.write("A grade");
+        // }
+        // else if (marks >= 60) {
+        //     document.write("B grade");
+        // }
+        // else if (marks >= 50) {
+        //     document.write("C grade");
+        // }
+        // else if (marks >= 35) {
+        //     document.write("D grade");
+        // }
+        // else {
+        //     document.write("Fail");
+        // }
+
+
+        const recharge = 400;
+        const youTubePremium = 250;
+
+        if (recharge >= 300) {
+
+            if (youTubePremium >= 350) {
+                document.write("You can watch YouTube Premium");
+            }
+            else {
+                document.write("You can`t watch YouTube Premium");
+            }
+
         }
         else {
-            document.write("Fail");
+            document.write("You dont`t have Internet pack");
         }
+
     </script>
 </body>
 
