--- a/JavaScript/DecisionMakingStatement/ifStatement.html
+++ b/JavaScript/DecisionMakingStatement/ifStatement.html
@@ -50,21 +50,53 @@
         // }
 
 
-        const recharge = 400;
-        const youTubePremium = 250;
+        // const recharge = 400;
+        // const youTubePremium = 250;
 
-        if (recharge >= 300) {
+        // if (recharge >= 300) {
 
-            if (youTubePremium >= 350) {
-                document.write("You can watch YouTube Premium");
-            }
-            else {
-                document.write("You can`t watch YouTube Premium");
-            }
+        //     if (youTubePremium >= 350) {
+        //         document.write("You can watch YouTube Premium");
+        //     }
+        //     else {
+        //         document.write("You can`t watch YouTube Premium");
+        //     }
 
-        }
-        else {
-            document.write("You dont`t have Internet pack");
+        // }
+        // else {
+        //     document.write("You dont`t have Internet pack");
+        // }
+
+
+
+        let weekDay = 6;
+
+        switch (weekDay) {
+            case 1:
+                document.writeln("Monday");
+                break;
+            case 2:
+                document.writeln("Tuesday");
+                break;
+            case 3:
+                document.writeln("Wednesday");
+                break;
+            case 4:
+                document.writeln("Thursday");
+                break;
+            case 5:
+                document.writeln("Friday");
+                break;
+            case 6:
+                document.writeln("Saturday");
+                break;
+            case 7:
+                document.writeln("Sunday");
+                break;
+
+            default:
+                document.writeln("Invalid day");
+                break;
         }
 
     </script>
