--- a/JavaScript/DecisionMakingStatement/ifStatement.html
+++ b/JavaScript/DecisionMakingStatement/ifStatement.html
@@ -69,34 +69,59 @@
 
 
 
-        let weekDay = 6;
+        // let weekDay = 6;
 
-        switch (weekDay) {
-            case 1:
-                document.writeln("Monday");
-                break;
-            case 2:
-                document.writeln("Tuesday");
-                break;
-            case 3:
-                document.writeln("Wednesday");
-                break;
-            case 4:
-                document.writeln("Thursday");
-                break;
-            case 5:
-                document.writeln("Friday");
-                break;
-            case 6:
-                document.writeln("Saturday");
-                break;
-            case 7:
-                document.writeln("Sunday");
-                break;
+        // switch (weekDay) {
+        //     case 1:
+        //         document.writeln("Monday");
+        //         break;
+        //     case 2:
+        //         document.writeln("Tuesday");
+        //         break;
+        //     case 3:
+        //         document.writeln("Wednesday");
+        //         break;
+        //     case 4:
+        //         document.writeln("Thursday");
+        //         break;
+        //     case 5:
+        //         document.writeln("Friday");
+        //         break;
+        //     case 6:
+        //         document.writeln("Saturday");
+        //         break;
+        //     case 7:
+        //         document.writeln("Sunday");
+        //         break;
 
-            default:
-                document.writeln("Invalid day");
-                break;
+        //     default:
+        //         document.writeln("Invalid day");
+        //         break;
+        // }
+        let WeekDay = 8;
+        if (Weekday == 1) {
+            document.writeln("Monday")
+        }
+        else if (Weekday == 2) {
+            document.writeln("Tuesday")
+        }
+        else if (Weekday == 3) {
+            document.writeln("Wednesday")
+        }
+        else if (Weekday == 4) {
+            document.writeln("Thursday")
+        }
+        else if (Weekday == 5) {
+            document.writeln("Friday")
+        }
+        else if (Weekday == 6) {
+            document.writeln("Saturday")
+        }
+        else if (Weekday == 7) {
+            document.writeln("Sunday")
+        }
+        else {
+            document.writeln("Invalid Day")
         }
 
     </script>
