--- a/JavaScript/Loop/whileLoop.html
+++ b/JavaScript/Loop/whileLoop.html
@@ -11,7 +11,7 @@
     <script>
         let a = 10;
         while (a <= 20) {
-            document.writeln(a);
+            document.writeln(a)
             a++;
 
         }
