--- a/JavaScript/function/code1.html
+++ b/JavaScript/function/code1.html
@@ -25,7 +25,15 @@
         // }
 
         // let output = funName(30, 78)
-        // document.write(output);        
+        // document.write(output);
+
+
+
+        let name = prompt("Enter your name ")
+        function fun(setName) {
+            alert("Hello " + setName);
+        }
+        fun(name);
     </script>
 </body>
 
