--- a/JavaScript/function/code1.html
+++ b/JavaScript/function/code1.html
@@ -29,11 +29,36 @@
 
 
 
-        let name = prompt("Enter your name ")
-        function fun(setName) {
-            alert("Hello " + setName);
+        // let name = prompt("Enter your name ")
+        // function fun(setName) {
+        //     alert("Hello " + setName);
+        // }
+        // fun(name);
+
+
+
+        // what is your name:
+        // what is your Course:
+        // what is your Age:
+        // what is your Address:
+
+        // let name = prompt("Enter your name ")
+        // let course = prompt("Enter your Course ")
+        // let age = prompt("Enter your Age ")
+        // let address = prompt("Enter your Address ")
+
+        // function funtionName(name, course, age, address) {
+        //     alert("Hello  my name is " + name + "my course is " + ", " + course + ", " + age + ", " + address);
+        // }
+        // funtionName(name, course, age, address);
+
+        // function expression
+
+        let functionName = function () {
+            alert("Hello")
         }
-        fun(name);
+
+        functionName();
     </script>
 </body>
 
